// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhookProcessor handleIncomingWebhook for delete call deleteNode action for modular content as well 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Magic note",
      },
    },
    "id": "d02ab1e7-56d4-588d-9d15-0266a84ec349",
    "internal": Object {
      "contentDigest": "aae62fcb99f01c62256c16f301df2eca",
      "counter": 145,
      "owner": "@kentico/gatsby-source-kontent",
      "type": "kontent_item_note",
    },
    "parent": null,
    "preferred_language": "en-US",
    "system": Object {
      "codename": "bcbb41f3_b964_01af_7c70_8384a101bca5",
      "id": "bcbb41f3-b964-01af-7c70-8384a101bca5",
      "language": "en-US",
      "last_modified": "2020-09-23T10:21:25.7632394Z",
      "name": "bcbb41f3-b964-01af-7c70-8384a101bca5",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "test_note_linekd_inline_kontent_item",
          "bcbb41f3_b964_01af_7c70_8384a101bca5",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>Great notes</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"bcbb41f3_b964_01af_7c70_8384a101bca5\\"></object>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"link\\" data-codename=\\"test_note_linekd_inline_kontent_item\\"></object>",
      },
    },
    "id": "c415f1ce-6022-5672-8439-04c023ee2184",
    "internal": Object {
      "contentDigest": "f6d6bb19f908369cf2209a6de314000e",
      "counter": 144,
      "owner": "@kentico/gatsby-source-kontent",
      "type": "kontent_item_author",
    },
    "parent": null,
    "preferred_language": "en-US",
    "system": Object {
      "codename": "ondrejch_test__copy_",
      "id": "74b9fc6e-b7e2-42a1-a01b-ae6ee69b2174",
      "language": "en-US",
      "last_modified": "2020-09-23T10:21:25.7632394Z",
      "name": "Ondrejch test (copy)",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
]
`;

exports[`webhookProcessor handleIncomingWebhook for upsert management API webhoook trigger (change workflow step) call createNode action for modular content as well when turned on 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "n6951be2b_e502_01ed_79a4_80ad776ae16b",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>This is a sample notes element with one note component</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"n6951be2b_e502_01ed_79a4_80ad776ae16b\\"></object>",
      },
    },
    "id": "dummyId-kontent_item_en-US_eedf0209-989c-4adb-bc83-546e325ab781",
    "internal": Object {
      "contentDigest": "4416e4041857112eddf4caeb6dca5195",
      "type": "kontent_item_author",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "author",
      "id": "eedf0209-989c-4adb-bc83-546e325ab781",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "Author",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Note 1",
      },
    },
    "id": "dummyId-kontent_item_en-US_6951be2b-e502-01ed-79a4-80ad776ae16b",
    "internal": Object {
      "contentDigest": "5d088a503493a36e057d990043b1515e",
      "type": "kontent_item_note",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "n6951be2b_e502_01ed_79a4_80ad776ae16b",
      "id": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
]
`;

exports[`webhookProcessor handleIncomingWebhook for upsert management API webhoook trigger (change workflow step) does not call createNode actions when turned off 1`] = `Array []`;

exports[`webhookProcessor handleIncomingWebhook for upsert preview API trigger call createNode action for modular content as well 1`] = `
Array [
  Object {
    "children": Array [],
    "elements": Object {
      "notes": Object {
        "images": Array [],
        "links": Array [],
        "modular_content": Array [
          "n6951be2b_e502_01ed_79a4_80ad776ae16b",
        ],
        "name": "Notes",
        "type": "rich_text",
        "value": "<p>This is a sample notes element with one note component</p>
<object type=\\"application/kenticocloud\\" data-type=\\"item\\" data-rel=\\"component\\" data-codename=\\"n6951be2b_e502_01ed_79a4_80ad776ae16b\\"></object>",
      },
    },
    "id": "dummyId-kontent_item_en-US_eedf0209-989c-4adb-bc83-546e325ab781",
    "internal": Object {
      "contentDigest": "4416e4041857112eddf4caeb6dca5195",
      "type": "kontent_item_author",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "author",
      "id": "eedf0209-989c-4adb-bc83-546e325ab781",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "Author",
      "sitemap_locations": Array [],
      "type": "author",
    },
  },
  Object {
    "children": Array [],
    "elements": Object {
      "text": Object {
        "name": "Text",
        "type": "text",
        "value": "Note 1",
      },
    },
    "id": "dummyId-kontent_item_en-US_6951be2b-e502-01ed-79a4-80ad776ae16b",
    "internal": Object {
      "contentDigest": "5d088a503493a36e057d990043b1515e",
      "type": "kontent_item_note",
    },
    "preferred_language": "en-US",
    "system": Object {
      "codename": "n6951be2b_e502_01ed_79a4_80ad776ae16b",
      "id": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "language": "en-US",
      "last_modified": "2020-09-22T09:33:13.7465607Z",
      "name": "6951be2b-e502-01ed-79a4-80ad776ae16b",
      "sitemap_locations": Array [],
      "type": "note",
    },
  },
]
`;
